modif mercredi matin 11h06->11h23

--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -5,4 +5,8 @@ contact:
 
     email:
         error: Vous devez saisir une adresse email réelle
+
     empty_text: Le champs ne peut être vide
+
+alphanumeric:
+    message: La valeur "{{ value }}" n'est pas correct.
