modif mercredi matin 12h17->12h23 trad article 2

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -21,8 +21,13 @@ contact:
 article:
     title: Titre
     summary: Résumé
-    content: Contenue
+    content: Contenu
     createdAt: Date de création
     updatedAt: Date de modification
     published: Statut de publication
     actions: Actions
+    createNew: Créer nouvel article
+    show: Montrer
+    edit: Modifier
+    yes: Publié
+    no: Pas publié
