modif mercredi aprem 15h30 published

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -31,6 +31,9 @@ article:
     edit: Modifier
     yes: Publié
     no: Pas publié
+    back: Retour
+    MAJ: Mettre a jour
+    update: Enregistrer
 
     created:
         success: Votre article a bien été enregistré.
